<resources>
    <string name="app_name">CurrentNews</string>
    <string name="newsApp_heading">Search Latest News</string>
    <string name="keyword">Enter a keyword</string>
    <string name="search_label">Search</string>
    <string name="network_error_message">No related news found</string>
    <string name="article_image">Article Image</string>
    <string name="article_title">Title</string>
    <string name="article_description">Description</string>
    <string name="article_publishedAt">PublisheAt</string>
    <string name="read_more">Read More</string>
    <string name="autofill_hint">Just one keyword</string>
    <string name="content_description">Picture Image</string>
    <string name="reference_title">Tile</string>
    <string name="quote_new">Description</string>
    <string name="cd_direction">Direction</string>
    <string name="cd_detail_picture_message">Detailed Picture Message</string>
    <string name="news_content">content</string>

</resources>
