<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="4dp"
    tools:context=".MainActivity">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/newsAppHeaddingLayoutId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:background="@drawable/bg_heading"
        android:gravity="center"
        android:padding="@dimen/first_linear_layout_padding"
        >

        <TextView
            android:id="@+id/newsAppHeadingId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aclonica"
            android:text="@string/newsApp_heading"
            android:textSize="@dimen/text_size"
            android:padding="@dimen/heading_padding"
            android:textAlignment="center"
            />


    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/userInputLayoutId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/newsAppHeaddingLayoutId"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:orientation="horizontal"
        android:padding="@dimen/first_linear_layout_padding"
        >

        <EditText
            android:id="@+id/inputFromUserId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/keyword"
            android:inputType="text"
            android:textSize="@dimen/input_text_size"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/searchButtonId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_label"
            android:textSize="@dimen/input_text_size"
            />



    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/userInputLayoutId"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/myRecyclerViewId"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                />

            <ProgressBar
                android:id="@+id/progressBarId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="visible"
                />

            <TextView
                android:id="@+id/networkErrorMsgId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/network_error_message"
                android:layout_gravity="center"
                android:visibility="invisible"
                />



        </FrameLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>


</RelativeLayout>