<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="Article"
            type="com.polish.currentnews.model.Article" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.DetailActivity">

            <ImageView
                android:id="@+id/detailedPictureMessage"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/cd_detail_picture_message"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/newsimage"
                android:scaleType="centerInside"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                />

            <TextView
                android:id="@+id/detailedTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/detailedPictureMessage"
                android:layout_centerHorizontal="true"
                android:text="@{Article.title}"
                tools:text="@string/reference_title"
                android:fontFamily="serif"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:textAlignment="center"
                />

            <View
                android:id="@+id/divider"
                android:layout_marginTop="8dp"
                android:layout_width="200dp"
                android:layout_height="1dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/detailedTextView"
                android:background="?android:colorPrimary"
                />

            <TextView
                android:id="@+id/content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{Article.content}"
                android:layout_below="@id/divider"
                tools:text="@string/news_content"
                android:layout_centerInParent="true"
                android:minLines="2"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:textAlignment="viewStart"
                />


        </RelativeLayout>
    </ScrollView>
</layout>